# youtube_automanager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  constants.py  db.py  deploy.cmd  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  tryouts.py  venv.cmd  venv_module.cmd  youtube_api.py  youtube_automanager.cmd  youtube_automanager.yml.example  youtube_automanager_username.yml.example
.github/workflows/: codeql.yml  docker-image.yml
script/: build_run.cmd  deploy.cmd  deploy_remote.cmd
youtube_automanager/: __main__.py  config.py  constants.py  db.py  oauth.py  youtube_api.py
youtube_automanager/runners/: automanage.py
