[tool.poetry]
name = "youtube-automanager"
version = "0.1.0"
description = ""
authors = ["Alexey Rubaseff <alexey.rubasheff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
global-logger = "^0.4.2"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.34"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
trustme = "^1.1.0"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.144.0"
python-worker = "^2.2.4"
pendulum = "^3.0.0"
python-youtube = "^0.9.6"
knockknock = "^0.1.8.1"


[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
